src/test/ui/consts/min_const_fn/promotion.nll.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/promotion.rs:14:28
   |
LL |     let y: &'static i32 = &foo2(42); //~ ERROR does not live long enough
   |                            ^^^^^^^^ temporary value does not live long enough
...
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0597]: borrowed value does not live long enough
  --> $DIR/promotion.rs:16:34
   |
LL |     let a: &'static Cell<i32> = &foo4();
   |                                  ^^^^^^ temporary value does not live long enough
...
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0597]: borrowed value does not live long enough
  --> $DIR/promotion.rs:17:42
   |
LL |     let a: &'static Option<Cell<i32>> = &foo5();
   |                                          ^^^^^^ temporary value does not live long enough
LL |     let a: &'static Option<Cell<i32>> = &foo6();
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0597]: borrowed value does not live long enough
  --> $DIR/promotion.rs:18:42
   |
LL |     let a: &'static Option<Cell<i32>> = &foo6();
   |                                          ^^^^^^ temporary value does not live long enough
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0597`.
